LATEST SNAPSHOT
---------------

ehisqlgen 1.14.1 (2021-12-28)
-----------------------------
- create GPKG spatial index (ili2db#391)

ehisqlgen 1.14.0 (2021-03-11)
-----------------------------
- change DbColNumber.min/max from Integer to Long (ili2db#348)
- PG: map DbColNumber to bigint if required (ili2db#348)
- PG: create date/time constraints (ili2db#330)
- PG: create text constraints (ili2db#331, ili2db#340)

ehisqlgen 1.13.8 (2019-09-06)
-----------------------------
- GPKG: enable FK loops between tables

ehisqlgen 1.13.7 (2019-04-03)
-----------------------------
- allow schema generation without open connection
- added DbColJson
- added DbColVarchar.setValueRestriction()
- allow to keep text representation for DbColGeometry bounding box (min,max1..3)
- PG: use postgis geometry types instead of AddGeometryColumn
- GPKG: support ARRAY mapping (to JSON)

ehisqlgen 1.13.6 (2018-09-05)
---------------------------
- GPKG: fixed java.util.NoSuchElementException if recursive FK

ehisqlgen 1.13.5 (2018-06-22)
---------------------------
- skip ';' without a stmt in front of it
- GPKG: ARRAY throws UnsupportedOperationException 
- GPKG: create canonical  loop-in-table-definition-error-message

ehisqlgen 1.13.4 (2018-03-06)
---------------------------
- GPKG: verify that create table statements are in a valid order

ehisqlgen 1.13.2 (2018-01-16)
---------------------------
- support parameters in sql scripts read by SqlReader
- skip ';' in DbUtility.readSqlStmt(); not part of SQL statement

ehisqlgen 1.12.0 (2017-11-28)
---------------------------
- PG: added ARRAY support

ehisqlgen 1.11.2 (2017-08-18)
---------------------------
- added DbUtility.fgdbTableExists()

ehisqlgen 1.11.1 (2017-06-22)
---------------------------
- PG: unique constraints changed to ST_AsBinary() for geometries 

ehisqlgen 1.11.0 (2017-06-19)
---------------------------
- added DbUtility, moved from ili2db

ehisqlgen 1.10.0 (2017-04-02)
---------------------------
- add DbColBlob